<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.example</groupId>
	<artifactId>graphql-demo</artifactId>
	<version>2.0.6-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>graphql-demo</name>
	<description>Demo project for Spring Boot</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.10</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>

		<swagger-annotations.version>1.6.12</swagger-annotations.version>
		<openapi-generator.version>7.19.0</openapi-generator.version>

		<!-- test -->
		<truth.version>1.4.5</truth.version>
		
		<junit.jupiter.version>5.12.2</junit.jupiter.version>
		<junit.platform.version>1.12.2</junit.platform.version>
		<mockito-rest-spring.version>${project.version}</mockito-rest-spring.version>
		<mockito-graphql-matchers.version>1.1.0</mockito-graphql-matchers.version>
		
		<test.jvm.argline>-Dio.netty.tryReflectionSetAccessible=false --add-exports
      java.base/jdk.internal.misc=ALL-UNNAMED --enable-native-access=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED
      -XX:+EnableDynamicAgentLoading --add-opens=java.base/java.util=ALL-UNNAMED</test.jvm.argline>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-webflux</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.servlet</groupId>
			<artifactId>jakarta.servlet-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents.client5</groupId>
			<artifactId>httpclient5</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.netflix.graphql.dgs</groupId>
		    <artifactId>graphql-dgs-client</artifactId>
		    <version>11.0.0</version>
		</dependency>
		<dependency>
		    <groupId>com.github.skjolber.mockito.graphql</groupId>
		    <artifactId>matchers</artifactId>
		    <version>${mockito-graphql-matchers.version}</version>
		</dependency>		
		<dependency>
			<groupId>com.fasterxml.jackson.jaxrs</groupId>
			<artifactId>jackson-jaxrs-json-provider</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.6</version>
		</dependency>
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>${swagger-annotations.version}</version>
		</dependency>
		<dependency>
		    <groupId>com.google.truth</groupId>
		    <artifactId>truth</artifactId>
		    <version>${truth.version}</version>
		</dependency>
		<dependency>
		    <groupId>com.google.truth.extensions</groupId>
		    <artifactId>truth-java8-extension</artifactId>
		    <version>${truth.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.github.skjolber.mockito-rest-spring</groupId>
		    <artifactId>junit5-tomcat</artifactId>
		    <version>${project.version}</version>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>				
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<!-- Shared with failsafe plugin -->
					<argLine>${test.jvm.argline}</argLine>
				</configuration>				
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<!-- Shared with surefire plugin -->
							<argLine>${test.jvm.argline}</argLine>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
